# RK3588_YOLOv8_Detect

./: README.md
func_code/: client.c  client_video.c  duty_cycle_send.c  light.vcxproj.filters  light_elf2.c  main.c  serveo_inspection.c  server_elf2.c  server_video.c  tracking_mode.c
yolov8_camera/cpp/: CMakeLists.txt  main.cc  tracking_mode  tracking_mode.c
